--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             <option value="rainy">Rainy</option>
         </select>
     </div>
+    <script src="./node_modules/axios/dist/axios.min.js"></script>
     <script src="src/index.js"></script>
 </body>
 </html>
