Stop page reload on form submission

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="main">
         <div id="top-banner">
             <div id="api-weather">
-                <form>
+                <form id="user-form" onsubmit="return false">
                     <input type="text" id="user-input">
                     <p>Please enter your city.</p>
                 </form>
