Changed default message and updated CSS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Weather Report</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;500&display=swap" rel="stylesheet">
 </head>
 
@@ -64,6 +62,24 @@
                     </div>
                 </button>
             </div>
+        </div>
+        <div class="temp" id="ac-temp">
+            <div class="bottom-duo" id="mid-bottom-duo">
+                <h3 class="headers">Actual Temp.</h3>
+                <h2 class="number" id="ac-number"></h2>
+            </div>
+            <!-- <div class="arrows">
+                <button id="up-temp">
+                    <div class="arrow arrow-up">
+                        ^
+                    </div>
+                </button>
+                <button id="down-temp">
+                    <div class="arrow arrow-down">
+                        ^
+                    </div>
+                </button>
+            </div> -->
         </div>
         <div class="temp" id="desired-sky">
             <div class="bottom-duo">
