Final minor edits

--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
             <option value="rainy">Rainy</option>
         </select>
     </div>
+    <div id="hiddenpix">
+        <img src="photos/cactus.png">
+        <img src="photos/clouds.png">
+        <img src="photos/fall1.png">
+        <img src="photos/rain1.jpeg">
+        <img src="photos/spring1.png">
+        <img src="photos/summer1.png">
+        <img src="photos/sun1.jpeg">
+        <img src="88E3CD8C-04A4-4623-B1C8-6A2E2DD946B3_4_5005_c.jpeg">
+        <img src="2579F552-C5B6-4DF6-9809-4CFC4B4BC7B5_4_5005_c.jpeg"
+    </div>
     <script src="./node_modules/axios/dist/axios.min.js"></script>
     <script src="src/index.js"></script>
 </body>
